--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -6,3 +6,5 @@ dash>=2.10.0,<3.0.0
 flask>=2.2.0,<2.3.0
 requests>=2.28.0,<3.0.0
 scikit-learn>=1.1.0,<2.0.0
+gunicorn>=20.1.0,<22.0.0
+boto3>=1.26.0,<2.0.0
